# mdk-orchestra

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
ab_experiment/: MODULE_NOTES.md  README.md  __init__.py  fleet_adapter.py  main.py  metrics.py  report_ab.py  runner.py  track_b.py  track_b_runner.py
action/: README.md  __init__.py  executor.py  main.py
agents/: __init__.py  _client.py  _history.py  base_specialist.py  config.py  curator.py  environment_agent.md  environment_agent.py  environment_memory.md  hashrate_agent.md  hashrate_agent.py  hashrate_memory.md  llm_backend.py  maestro.md  maestro.py  maestro_memory.md  main.py  power_agent.md  power_agent.py  power_memory.md  tools.py  voltage_agent.md  voltage_agent.py  voltage_memory.md
config/: ave_calibration.yaml  llm_routing.yaml
dashboard/: MODULE_NOTES.md  README.md  app.py  build_css.py  main.py  sse.py
dashboard/static/css/: dashboard.css
dashboard/static/js/: dashboard.js  event_stream.js
dashboard/templates/: base.html  decisions.html  index.html  miner_detail.html
deterministic_tools/: MODULE_NOTES.md  README.md  __init__.py  _pattern_features.py  base.py  config.py  isolation_forest_flagger.py  main.py  rule_engine_flagger.py  runner.py  sensitivity.yaml  train.py  xgb_pattern_flaggers.py  xgboost_flagger.py
docs/: architecture.md  configuration.md  extending.md  federated_memory_design.md  kpi.md  local_llm.md
examples/configs/: ave_calibration_conservative.yaml  llm_routing_dual_machine.yaml  llm_routing_minimal_api.yaml
examples/demo_replay/: README.md  snapshots.jsonl
examples/memories/: README.md  sample_hashrate_memory.md  sample_maestro_memory.md
examples/scripts/: comparison_smoke.sh  local_only_smoke.sh  quick_smoke.sh
ingest/: MODULE_NOTES.md  README.md  __init__.py  features.py  kpi.py  main.py  runner.py  thresholds.py
mdk_orchestra/: __init__.py  cli.py  cli_progress.py  cli_theme.py  replay.py
models/: xgb_chip_instability.pkl  xgb_predictor.pkl
report/: __init__.py  capture_screenshots.py  compute_ave.py
report/figures/: generate_fig_ave_explained.py
scripts/: ave_comparison_runner.py  extract_reasoning_gallery.py  generate_training_data.py  retrain_xgb_miner_wise.py  run_full_with_screenshots.py  run_live_demo.py  smoke_test_backends.py  smoke_xgb_inference.py  train_xgb_ensemble.py  train_xgb_iterate.py  xgb_leakage_check.py
scripts/ave_test_batch/: flags.json
shared/: __init__.py  event_bus.py  paths.py
shared/design/: tokens.json  tokens.py
shared/schemas/: __init__.py  events.py
shared/specs/: event_schemas.md  interfaces.md
simulator/: MODULE_NOTES.md  README.md  __init__.py  environmental.py  fleet_sim.py  main.py  miner_sim.py  runner.py
tests/: __init__.py  test_ab_metrics.py  test_ab_smoke.py  test_action_executor.py  test_agents_smoke.py  test_cli_wizard.py  test_cost_optimization.py  test_dashboard_app.py  test_detector_ml_flaggers.py  test_detector_protocol.py  test_detector_rule_engine.py  test_e2e_smoke.py  test_ingest_kpi.py  test_memory_layer.py  test_replay.py  test_session_isolation.py  test_simulator_smoke.py  test_xgb_ensemble.py  test_xgb_training.py
