[project]
name = "mdk-orchestra"
version = "0.1.0"
description = "Predictive maintenance for Bitcoin mining — multi-agent AI system (simulator + deterministic detectors + Orchestra)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Daniele Serlenga", email = "danieleserlenga@gmail.com" }]
keywords = ["bitcoin", "mining", "predictive-maintenance", "multi-agent", "llm", "orchestra"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.6.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "flask>=3.0.0",
    "polars>=0.20.0",
    "ulid-py>=1.1.0",
    "structlog>=24.1.0",
    "pyyaml>=6.0.1",
    "plotly>=5.20.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.9.0",
    "ruff>=0.3.0",
]
screenshots = [
    "playwright>=1.40.0",  # dashboard screenshot capture
]

[project.scripts]
mdk-orchestra = "mdk_orchestra.cli:main"

[project.urls]
Homepage = "https://github.com/nothingbugger/mdk-orchestra"
Repository = "https://github.com/nothingbugger/mdk-orchestra"
Issues = "https://github.com/nothingbugger/mdk-orchestra/issues"

[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "mdk_orchestra",
    "shared",
    "simulator",
    "ingest",
    "deterministic_tools",
    "agents",
    "action",
    "dashboard",
    "ab_experiment",
    "report",
]

# Ship non-package assets inside the wheel so pipx-installed users have
# them available at the same relative paths the dev tree uses.
[tool.hatch.build.targets.wheel.force-include]
"examples/demo_replay" = "examples/demo_replay"
"config/llm_routing.yaml" = "config/llm_routing.yaml"
"config/ave_calibration.yaml" = "config/ave_calibration.yaml"
"models/xgb_predictor.pkl" = "models/xgb_predictor.pkl"
"models/xgb_chip_instability.pkl" = "models/xgb_chip_instability.pkl"
"agents/maestro.md" = "agents/maestro.md"
"agents/voltage_agent.md" = "agents/voltage_agent.md"
"agents/hashrate_agent.md" = "agents/hashrate_agent.md"
"agents/environment_agent.md" = "agents/environment_agent.md"
"agents/power_agent.md" = "agents/power_agent.md"
"agents/maestro_memory.md" = "agents/maestro_memory.md"
"agents/voltage_memory.md" = "agents/voltage_memory.md"
"agents/hashrate_memory.md" = "agents/hashrate_memory.md"
"agents/environment_memory.md" = "agents/environment_memory.md"
"agents/power_memory.md" = "agents/power_memory.md"
"dashboard/static" = "dashboard/static"
"dashboard/templates" = "dashboard/templates"
"shared/design/tokens.json" = "shared/design/tokens.json"
"deterministic_tools/sensitivity.yaml" = "deterministic_tools/sensitivity.yaml"
